--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,6 +32,14 @@ p{
     right: 0;
 }
 
+.title-container h1{
+    font-size: 70px;
+}
+
+.menu-icon{
+    display: none;
+}
+
 .logo-nav-container{
     display: flex;
     justify-content: space-between; /*Con esto hacemos que los elementos que están como felx se vayan a la izq y der*/
@@ -67,7 +75,7 @@ p{
 }
 
 .main{
-    padding: 15rem; /*este padding lo hago porque al fijar la cabecera, se me superpone con el contenido, entonces se baja*/
+    padding: 20rem; /*este padding lo hago porque al fijar la cabecera, se me superpone con el contenido, entonces se baja*/
 }
 
 .footer{
@@ -79,10 +87,28 @@ p{
 }
 
 
-@media only screen and (max-width: 767px){ 
+@media only screen and (max-width: 770px){ 
     
+    .menu-icon{
+        display: block;
+        padding: 0.5rem 1rem;
+        border-radius: 20%;
+        width: 35px;
+        height: 35px;
+        
+    }
+
     .navigation{
         width: 100%;
+        margin-top: 1rem;
+    }
+
+    .navigation ul{
+        display: none;
+    }
+
+    .navigation ul.show{
+        display: block;
     }
 
     .navigation ul li{
@@ -91,7 +117,7 @@ p{
     
     .navigation ul li a{
         display: block;
-        padding:  0.5rem 1rem;
+        padding:  0.5rem 0;
         transition: all 0.4s linear; /*damos animación*/
         border-radius: 5px;
     }
@@ -99,5 +125,17 @@ p{
     .navigation ul li a:hover{/*cambiamos el color del fondo cuando pasamos por encima del boton*/
         background: #4a4a4a;
     }
+    
+    
+    .title-container h1{
+        font-size: 30px;
+    }
+
+
+    .main{
+        padding: 15rem; 
+    }
+
+
 
 }
