Configuración exitosa del envío de email

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -122,7 +122,7 @@ input{
  .formulario label{
     font-size: 13px;
  }
- #enviarBtn{
+ #btnEnviar{
     font-weight: bold;
     padding: 10px;
  }
