--- a/CSS/style-educacion.css
+++ b/CSS/style-educacion.css
@@ -11,3 +11,21 @@
 .icon-programs img{
     width: 5%;
 }
+.icon-programs #titulo{
+    width: 10%;
+}
+
+.section{
+    border: solid #b1b1b1;
+    border-radius: 10px;
+    text-align: center;
+    background-color: #c4c4c4;
+}
+.section h3{
+    font-weight: bold;
+}
+
+.section a{
+    padding: 0;
+    margin: 0;
+}
