Mejoras en index.htm agregando ventana emergente con animación y pequeños cambios en experiencia-laboral.html

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -116,6 +116,13 @@ p{
     display: block;
 }
 
+.bandera{
+    text-align: center;
+    width: 100%;
+}
+table .bandera td{
+    width: 425px;
+}
 
 .footer{
     background: #333;
