Agrego archivo Document.txt y se hacen pequeñas mejoras en estilos y páginas

--- a/CSS/style-contacto.css
+++ b/CSS/style-contacto.css
@@ -2,10 +2,11 @@
 .contacto {
    align-items: center;
    text-align: center; 
+   font-size: 40px;
 }
 
 .contacto img{
-    width: 2%;
+    width: 4%;
 }
 
 .section footer{
